@@ -1,3 +1,4 @@
+\B\.svn\b
 ^blib\/
 \~$
 ^Makefile(\.old)?$
