@@ -2,7 +2,7 @@
 
 package Bundle::DBD::mysql;
 
-$VERSION = '2.9002';
+$VERSION = '4.01';
 
 1;
 
@@ -10,7 +10,7 @@ __END__
 
 =head1 NAME
 
-Bundle::DBD::mysql - A bundle to install Perl drivers for mSQL or MySQL
+Bundle::DBD::mysql - A bundle to install Perl drivers for MySQL
 
 =head1 SYNOPSIS
 
@@ -20,15 +20,11 @@ C<perl -MCPAN -e 'install Bundle::DBD::mysql'>
 
 DBI
 
-Data::ShowTable
-
-Mysql
-
 DBD::mysql
 
 =head1 DESCRIPTION
 
-This bundle includes all that's needed to run both DBI drivers and
-non-DBI drivers for mSQL or MySQL.
+This bundle includes all that is needed to connect with a MySQL server using
+DBI.
 
 =cut
